# SmartShopXpress

./: CMakeLists.txt  CMakeLists.txt.user.7fbca14  CMakeLists.txt.user.b8b1f08  Gender.h  README.md  address.cpp  address.h  addresscreen.cpp  addresscreen.h  addresscreen.ui  buysomethingscreen.cpp  buysomethingscreen.h  buysomethingscreen.ui  cartscreen.cpp  cartscreen.h  cartscreen.ui  category.cpp  category.h  creatingmarket.cpp  creatingmarket.h  desktop.ini  favorite.cpp  favorite.h  favorite.ui  firstscreen.cpp  firstscreen.h  firstscreen.ui  images.qrc  loginscreen.cpp  loginscreen.h  loginscreen.ui  main.cpp  market.cpp  market.h  marketproduct.cpp  marketproduct.h  product.cpp  product.h  signupscreen.cpp  signupscreen.h  (+7 more)
img0/: desktop.ini
